--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,11 @@
     <groupId>com.mudxx</groupId>
     <artifactId>mudxx-sso</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <modules>
+        <module>mudxx-sso-auth</module>
+        <module>mudxx-sso-system</module>
+        <module>mudxx-sso-common</module>
+    </modules>
     <name>mudxx-sso</name>
     <packaging>pom</packaging>
 
@@ -15,6 +20,7 @@
         <spring.cloud.alibaba.version>2.2.6.RELEASE</spring.cloud.alibaba.version>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <hutool.version>5.8.11</hutool.version>
     </properties>
 
     <!--第一步: 定义子工程中核心依赖的版本管理(注意,只是版本管理)-->
@@ -67,6 +73,12 @@
                     <artifactId>junit-vintage-engine</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <!--HuTool Java工具包-->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>${hutool.version}</version>
         </dependency>
     </dependencies>
 
