--- a/mudxx-sso-auth/pom.xml
+++ b/mudxx-sso-auth/pom.xml
@@ -11,23 +11,16 @@
     <artifactId>mudxx-sso-auth</artifactId>
 
     <dependencies>
+        <!--子类工程-->
+        <dependency>
+            <groupId>com.mudxx</groupId>
+            <artifactId>mudxx-sso-common-web</artifactId>
+            <version>${mudxx.sso.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>com.alibaba.cloud</groupId>-->
-<!--            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>com.alibaba.cloud</groupId>-->
-<!--            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.cloud</groupId>-->
-<!--            <artifactId>spring-cloud-starter-openfeign</artifactId>-->
-<!--        </dependency>-->
-        <!--Spring Security+JWT+OAUTH2-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-oauth2</artifactId>
