--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>mudxx-sso</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <modules>
-        <module>mudxx-sso-auth</module>
+        <module>mudxx-sso-oauth</module>
         <module>mudxx-sso-system</module>
         <module>mudxx-sso-common</module>
         <module>mudxx-sso-modules</module>
