--- a/mudxx-sso-modules/mudxx-sso-modules-resource-demo/pom.xml
+++ b/mudxx-sso-modules/mudxx-sso-modules-resource-demo/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>mudxx-sso-common-web</artifactId>
             <version>${mudxx.sso.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.mudxx</groupId>
+            <artifactId>mudxx-sso-common-oauth-web</artifactId>
+            <version>${mudxx.sso.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
