--- a/mudxx-sso-oauth/pom.xml
+++ b/mudxx-sso-oauth/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>mudxx-sso-common-oauth-web</artifactId>
             <version>${mudxx.sso.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.mudxx.component</groupId>
+            <artifactId>mudxx-component-redis</artifactId>
+            <version>${mudxx.sso.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -29,6 +34,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-actuator</artifactId>
+        </dependency>
+        <!--spring-data-redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
     </dependencies>
 
